Added history  and some new features

--- a/index.html
+++ b/index.html
@@ -21,21 +21,17 @@
     <p class="title-mini">Calculator</p>
     <p class="history">history</p>
     <div class="history__container">
-      <div class="history__container--content">
-        <div class="history__container--content__item">
-          2+2 <br />
-          =4
-        </div>
-      </div>
+      <div class="history__container--content"></div>
+      <a id="clear-history">clear</a>
     </div>
     <div class="app">
       <div class="app--view">
         <div class="app--view-step">
-          <p id="step">2+2</p>
+          <p id="step"></p>
         </div>
         <div class="app--view-result">
           <p>=</p>
-          <p id="result">4</p>
+          <p id="result"></p>
         </div>
       </div>
       <div class="app--numbers">
